chore: reduce category defaults
